# CAD_Quoting_Tool

./: .gitignore  AppV7.py  AppV7.py.backup  CAD_EXTRACTION_SYSTEM_ANALYSIS.md  CAD_PLANNER_README.md  DummyQuote.txt  EXTRACT_TEXT_USAGE.md  MANIFEST.in  Master_Variables.csv  Material Mapper.csv  PERFORMANCE_OPTIMIZATIONS.md  PUNCH_DETECTION_IMPROVEMENTS.md  README.md  SECURITY_REVIEW.md  TEXT_EXTRACTION_FILES_ANALYSIS.md  app.py  appV5.py  app_settings.json  appv7_new_methods.py  bucketizer.py  cad-quoting-tool.code-workspace  cad_quote_formula.py  change.diff  conftest.py  consolidation_analysis.md  consolidation_summary.txt  debug_waterjet_201.py  dummy_quote_sheet.xlsx  dump_all_cad_text.py  dump_all_text.py  duplicate_functions_summary.md  dwg2dxf_wrapper.bat  dwg_smoketest.py  dxf_text_extract.py  example_cad_to_plan.py  extract_cad_text_sidecar.py  extract_text_demo.py  feature_extractor.py  geo_al_163holes.json  geo_extractor_test_output.json  (+90 more)
Cad Files/: 301_mtext_results.json  301_redacted.dwg  301_redacted.dxf  305_redacted.mtext_results.json  316A_redacted.dwg  316A_redacted.mtext_results.json  T1769-104_redacted.dwg  T1769-104_redacted.mtext_results.json  T1769-108_redacted.dwg  T1769-108_redacted.mtext_results.json  T1769-130.mtext_results.json  T1769-134.mtext_results.json  T1769-139.mtext_results.json  T1769-143_redacted.mtext_results.json  T1769-157.mtext_results.json  T1769-201_redacted.dwg  T1769-201_redacted.mtext_results.json  T1769-201_redacted_text_extraction.json  T1769-202.mtext_results.json  T1769-219.mtext_results.json  T1769-326.mtext_results.json  T1769-334.mtext_results.json  T1769-339.mtext_results.json  T1769-348.mtext_results.json  cad_quote_full_coverage.py  full_coverage_costs.csv  full_coverage_unused_numeric.csv  zeus1.stl
SMB/: IMPLEMENTATION_GUIDE.md  INDEX.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.txt  README_SCRAPMETALBUYERS.md  START_HERE.md  integration_example.py  scrapmetalbuyers_scraper.py  scrapmetalbuyers_scraper_selenium.py  test_scrapmetalbuyers_scraper.py
appkit/: __init__.py  effective.py  effective_helpers.py  env_utils.py  geometry_shim.py  graveyard.py  guardrails.py  llm_adapter.py  llm_converters.py  merge_utils.py  occ_compat.py  planner_adapter.py  planner_helpers.py  scrap_helpers.py  time_overhead_compat.py  vendor_utils.py
bs4/: __init__.py
cad_quoter/: __init__.py  cad_feature_extractor.py  coerce.py  config.py  costing_glue.py  decision_tree.py  domain.py  geo_dump.py  geo_extractor.py  geometry.py  geometry_fallbacks.py  geometry_shims.py  geometry_wrappers.py  llm.py  llm_overrides.py  llm_suggest.py  material_density.py  materials.py  pass_labels.py  pricing.py  rates.py  test_geo_extractor.py  utils.py
cad_quoter_pkg/: MANIFEST.in  README.md  __init__.py  pyproject.toml
cad_quoter_pkg/src/: __init__.py
cad_quoter_pkg/src/cad_quoter/: __init__.py  config.py  costing_glue.py  llm_overrides.py  pricing.py  rates.py
cad_quoter_pkg/src/cad_quoter/app/: __init__.py  chart_lines.py  cli.py  effective.py  guardrails.py  hole_ops.py  llm_helpers.py  op_parser.py  optional_loaders.py  planner_adapter.py  planner_support.py  quote_doc.py  runner.py
cad_quoter_pkg/src/cad_quoter/domain_models/: materials.py  values.py
cad_quoter_pkg/src/cad_quoter/estimators/: __init__.py  drilling.py  drilling_legacy.py
cad_quoter_pkg/src/cad_quoter/geo2d/: apply.py
cad_quoter_pkg/src/cad_quoter/geometry/: __init__.py  dxf_enrich.py  dxf_text.py  hole_table_parser.py
cad_quoter_pkg/src/cad_quoter/io/: __init__.py
cad_quoter_pkg/src/cad_quoter/llm/: __init__.py  converters.py  sanitizers.py
cad_quoter_pkg/src/cad_quoter/pricing/: __init__.py  feed_math.py  machining_report.py  materials.py  milling_estimator.py  planner.py  process_buckets.py  process_cost_renderer.py  process_rates.py  process_view.py  rate_buckets.py  rate_defaults.py  speeds_feeds_selector.py  vendor_csv.py  vendor_lead_times.py  wieland_scraper.py
cad_quoter_pkg/src/cad_quoter/pricing/resources/: speeds_feeds_merged.csv
cad_quoter_pkg/src/cad_quoter/resources/: __init__.py  app_settings.json  materials.json  rates_v1.json  vl_pdf_schema.json
cad_quoter_pkg/src/cad_quoter/speeds_feeds/: __init__.py
cad_quoter_pkg/src/cad_quoter/ui/: __init__.py  llm_panel.py  planner_render.py  services.py  session_io.py  suggestions.py  tk_compat.py
cad_quoter_pkg/src/cad_quoter/utils/: __init__.py  debug_tables.py  geo_ctx.py  geometry.py  numeric.py  scrap.py  sheet_helpers.py  text.py  text_rules.py
cad_quoter_pkg/src/cad_quoter/utils/render_utils/: tables.py
cad_quoter_pkg/src/cad_quoter/vendors/: occt.py
deploy/: __init__.py  __main__.py  cli.py
docs/: CAD_PLANNER_README.md  CONSOLIDATION_QUICK_REFERENCE.md  DWG_MTEXT_Normalization.md  DWG_Punch_Extraction_Enhancements_v2.md  (+18 more)
(+466 files in other folders)
