[project]
name = "cad-quoter"
version = "0.1.0"
description = "Reusable CAD quoting utilities"
readme = "cad_quoter_pkg/README.md"
authors = [{ name = "CAD Quoting Team" }]
license = { text = "Proprietary" }
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "ezdxf>=1.0",
    "llama-cpp-python>=0.2.0",
    "lxml>=4.9",
    "OCP>=7.7",
    "openpyxl>=3.1",
    "pandas>=1.5",
    "pandas-stubs==2.2.2.240514",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "requests-pkcs12>=1.22",
    "trimesh>=3.22",
    "truststore>=0.9.2",
    "types-ezdxf==1.0.0",
    "types-PyMuPDF==1.24.3.20240525",
    "types-pythonocc-core==7.7.0.1",
]

[tool.ruff]
line-length = 100
fix = true
target-version = "py311"

[tool.ruff.lint]
select = ["F401", "F841", "E", "W", "I"]
ignore = []

[tool.black]
line-length = 100

[tool.pyright]
include = ["."]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["cad_quoter*"]

[tool.setuptools.package-data]
cad_quoter = [
    "resources/**/*",
    "pricing/resources/**/*",
    "llm/**/*",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
